feat(env): merge two env-files from building (.env) and running (potos_env) into one file (.env), as we do not need two afaik.

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
+POTOS_CLIENT_NAME="Schroeffu Linux Client"
 POTOS_FULL_DISK_ENCRYPTION_INITIAL_PASSWORD=install
 POTOS_INITIAL_HOSTNAME=potos_linux_client
+POTOS_SPECS_REPOSITORY=https://github.com/projectpotos/ansible-specs-potos.git
+POTOS_ADJOIN=false
+POTOS_ENV=production
