--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
       args:
         POTOS_FULL_DISK_ENCRYPTION_INITIAL_PASSWORD: ${POTOS_FULL_DISK_ENCRYPTION_INITIAL_PASSWORD}
         POTOS_INITIAL_HOSTNAME: ${POTOS_INITIAL_HOSTNAME}
+        POTOS_CLIENT_NAME: ${POTOS_CLIENT_NAME}
     volumes:
       - type: bind
         source: ./potos-images
         target: /potos-iso/potos-images
-    env_file: potos_env
+    env_file: .env
