fix(env): add POTOS_CLIENT_NAME and POTOS_CLIENT_SHORTNAME into the ISO and firstboot.

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-POTOS_CLIENT_NAME="Schroeffu Linux Client"
+POTOS_CLIENT_NAME="Potos Linux Client"
+POTOS_CLIENT_SHORTNAME="potos"
 POTOS_FULL_DISK_ENCRYPTION_INITIAL_PASSWORD=install
-POTOS_INITIAL_HOSTNAME=potos_linux_client
+POTOS_INITIAL_HOSTNAME=potos_hostname
 POTOS_SPECS_REPOSITORY=https://github.com/projectpotos/ansible-specs-potos.git
 POTOS_ADJOIN=false
 POTOS_ENV=production
