--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         POTOS_FULL_DISK_ENCRYPTION_INITIAL_PASSWORD: ${POTOS_FULL_DISK_ENCRYPTION_INITIAL_PASSWORD}
         POTOS_INITIAL_HOSTNAME: ${POTOS_INITIAL_HOSTNAME}
         POTOS_CLIENT_NAME: ${POTOS_CLIENT_NAME}
+        POTOS_CLIENT_SHORTNAME: ${POTOS_CLIENT_SHORTNAME}
     volumes:
       - type: bind
         source: ./potos-images
