fix(vars,env): fixed some vars and adjusted the env files.

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 POTOS_CLIENT_NAME="Potos Linux Client"
 POTOS_CLIENT_SHORTNAME="potos"
 POTOS_DISK_ENCRYPTION_INITIAL_PASSWORD=install
-POTOS_INITIAL_HOSTNAME=potos_dummy_initial_hostname
-POTOS_SPECS_REPOSITORY=https://github.com/projectpotos/ansible-specs-potos.git
+POTOS_INITIAL_HOSTNAME=potoshostname01
 POTOS_GIT_SPECS_URL=https://github.com/projectpotos/
 POTOS_GIT_SPECS_REPO=ansible-specs-potos
 POTOS_GIT_SPECS_BRANCH=main
-POTOS_ADJOIN=false
 POTOS_ENV=production
 
+# Not implemented yet
+
+POTOS_ADJOIN=false
