feature(install): this commit includes a running install process, but with dummy YAD prompts.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
         POTOS_INITIAL_HOSTNAME: ${POTOS_INITIAL_HOSTNAME}
         POTOS_CLIENT_NAME: ${POTOS_CLIENT_NAME}
         POTOS_CLIENT_SHORTNAME: ${POTOS_CLIENT_SHORTNAME}
+        POTOS_INITIAL_USERNAME: ${POTOS_INITIAL_USERNAME}
+        POTOS_INITIAL_PASSWORD_HASH: "${POTOS_INITIAL_PASSWORD_HASH}"
     volumes:
       - type: bind
         source: ./potos-images
